--- a/CSS/style.css
+++ b/CSS/style.css
@@ -104,3 +104,36 @@ body {
     transform: translateY(-5px);
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
+
+.pagination-dot {
+    cursor: pointer;
+    height: 12px;
+    width: 12px;
+    margin: 0 5px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.pagination-dot.active, .pagination-dot:hover {
+    background-color: #717171;
+}
+
+.pagination-arrow {
+    cursor: pointer;
+    padding: 8px;
+    border-radius: 50%;
+    background-color: #f3f4f6;
+    margin: 0 10px;
+    transition: background-color 0.3s ease;
+}
+
+.pagination-arrow:hover {
+    background-color: #e5e7eb;
+}
+
+.pagination-arrow.disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+}
