--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,6 +31,12 @@ body {
     font-weight: 600;
 }
 
+.chart-container {
+    position: relative;
+    height: 350px;
+    width: 100%;
+}
+
 #overview-panel canvas {
     cursor: pointer;
 }
@@ -137,4 +143,3 @@ body {
     cursor: not-allowed;
     opacity: 0.5;
 }
-
